--- a/main.css
+++ b/main.css
@@ -2,20 +2,122 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  text-align: center;
+
+  /* transition: all 2.5s ease; */
 }
 
-.logo {
-  font-size: larger;
+body {
+  font-family: "Open Sans", sans-serif;
+  align-items: center;
+  font-size: 20px;
+  line-height: 1.5;
+  /* overflow: hidden; */
+}
+
+/* :root {
+  --height: 3em;
+  --bgr: rgb(64, 64, 64);
+} */
+
+nav {
+  height: 50px;
+  background-color: grey;
+}
+
+.menu-brand {
+  font-size: 20px;
+  float: left;
+  padding: 20px;
 }
 
 .menu-links li {
   list-style-type: none;
   display: inline;
+  float: right;
+  padding: 20px;
 }
+
+/* button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  cursor: pointer;
+  color: white;
+  background-color: goldenrod;
+  background: var(--bgr);
+  height: calc(1 * var(--height));
+  width: calc(2 * 0.866 * var(--height));
+  box-shadow: 0.5em 0.5em 0.5em goldenrod;
+  transition: box-shadow ease 0.2s;
+  z-index: 9;
+}
+
+button:after,
+button:before {
+  content: "";
+  position: absolute;
+  transition: all ease-in-out 0.35s;
+  top: 0px;
+  left: 0px;
+  height: calc(1 * var(--height));
+  width: calc(2 * 0.866 * var(--height));
+  background: var(--bgr);
+  opacity: 0;
+  z-index: -5;
+}
+
+button:hover {
+  transition: box-shadow linear 0.2s;
+  box-shadow: none;
+}
+
+button:hover:after {
+  transform: rotate(60deg) translateX(calc(-2 * var(--height)));
+}
+
+button:hover:before {
+  transform: rotate(-60deg) translateX(calc(2 * var(--height)));
+}
+
+button:active:before,
+button:active:after {
+  transform: rotateZ(0deg);
+}
+
+button:active:before {
+  transition-delay: 0.1s;
+} */
+
+button {
+  background-color: lightgray;
+  border-radius: 30%;
+  margin-top: 20px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+h1 {
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 40px;
+}
+
+section {
+  min-height: 200px;
+  padding: 30px 15px;
+  background-color: lightgrey;
+}
+
+section:nth-child(even) {
+  background-color: darkgrey;
+}
+
 #wrapper {
-  border: thick green solid;
-  width: 250px;
-  height: 100px;
+  width: 300px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
@@ -23,21 +125,23 @@
 
 #landing-page-banner,
 #landing-page-transform {
-  width: 250px;
-  height: 100px;
+  width: 300px;
+  height: 150px;
   text-align: center;
   line-height: 100px;
 }
 
 #landing-page-banner {
-  background: darkblue;
-  color: white;
-}
-#landing-page-banner:hover {
-  margin-top: -100px;
+  transition: margin-top 1s;
 }
 
-#landing-page-transform {
-  background: darkred;
-  color: antiquewhite;
+#landing-page-banner:hover {
+  margin-top: -150px;
 }
+
+/* #landing-page-transform {
+  visibility: hidden;
+}
+#landing-page-transform:hover {
+  visibility: visible;
+} */
