--- a/create-group/create-group.css
+++ b/create-group/create-group.css
@@ -23,3 +23,20 @@ nav {
   font-size: 20px;
   float: left;
 }
+
+fieldset {
+  margin-top: 20px;
+  width: 320px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+  font-size: 12px;
+}
+
+label {
+  display: inline-block;
+  margin-top: 20px;
+}
