added items to dashboard

--- a/create-goal/create-goal.css
+++ b/create-goal/create-goal.css
@@ -19,32 +19,31 @@ nav {
   color: white;
 }
 
-header {
-  margin-top: 10px;
-}
-
 .menu-brand {
   font-size: 20px;
   float: left;
 }
 
-.side-bar-nav {
-  float: left;
+fieldset {
+  margin-top: 20px;
+  width: 320px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+}
+
+p {
+  font-size: 12px;
+}
+
+label {
+  display: flex;
+  justify-content: space-evenly;
   margin-top: 10px;
 }
 
-.side-bar-item {
-  margin-top: 10px;
-  margin-left: 20px;
-  padding: 20px;
-  background-color: grey;
-  border: 1 px black;
-}
-
-.side-bar-item-expanded li {
-  list-style-type: none;
-  text-align: left;
-  margin-top: 10px;
-  margin-left: 50px;
-  font-size: 18px;
+input,
+textarea {
+  width: 200px;
 }
