added wireframe for group dashboard

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -20,12 +20,11 @@ nav {
 }
 
 main {
-  width: 95%;
-  max-width: 120rem;
+  margin-top: 10px;
+  max-width: 320px;
   display: flex;
-  flex-direction: row;
-  margin: 0 auto;
-  flex: 2;
+  flex-direction: column;
+  align-items: safe center;
 }
 
 header {
@@ -45,7 +44,7 @@ header {
 
 .side-bar-item {
   margin-top: 10px;
-  margin-left: 20px;
+
   padding: 20px;
   background-color: grey;
   border: 1 px black;
@@ -54,7 +53,6 @@ header {
 .side-bar-item-expanded li {
   list-style-type: none;
   margin-top: 10px;
-  margin-left: 30px;
 }
 
 section {
@@ -62,15 +60,14 @@ section {
 }
 
 textarea {
-  margin-left: 100px;
   width: 300px;
   height: 600px;
 }
 
+.progress-check,
 .user-entries {
   display: flex;
   flex-direction: column;
-  margin: 30px;
 }
 
 .add-goal {
@@ -84,11 +81,15 @@ textarea {
   margin-top: 20px;
 }
 
-.save-button {
+button {
   margin-top: 10px;
   padding: 10px;
 }
 
 input {
   padding: 10px;
+}
+
+/* set media queries */
+@media (min-width: 768px) {
 }
