--- a/group-dashboard/group-dashboard.css
+++ b/group-dashboard/group-dashboard.css
@@ -19,11 +19,40 @@ nav {
   color: white;
 }
 
-header {
+main {
   margin-top: 10px;
+  max-width: 320px;
+  display: flex;
+  flex-direction: column;
+  align-items: safe center;
+}
+
+header {
+  margin-top: 20px;
 }
 
 .menu-brand {
   font-size: 20px;
   float: left;
+}
+
+.menu-links {
+  list-style-type: none;
+  display: flex;
+  float: right;
+}
+
+.group-members > li {
+  list-style-type: none;
+  margin-top: 10px;
+  display: block;
+}
+
+li,
+img {
+  display: inline;
+}
+
+h1 {
+  margin-top: 20px;
 }
